# Copyright (C) 2026 The Qt Company Ltd.
# SPDX-License-Identifier: LicenseRef-Qt-Commercial OR LGPL-3.0-only

[package]
name = "ColorPalette"
version = "0.1.0"
edition = "2024"
description = "Rust port of the famous colorpalette example"

[dependencies]
qtbridge = { path = "../../crates/qtbridge", features = ["serde_json"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1"
